--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^7.1.2",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.5.2",
     "mysql2": "^3.9.7",
     "pug": "^3.0.2",
     "sequelize": "^6.37.3"
